test(http): share one HttpClient fake instead of two hand-rolled stubs
CsvUploadServiceTest and PicPeakServiceTest each carried a full HttpClient
subclass, an HttpResponse implementation and a body-draining subscriber --
around 400 lines of JDK interface boilerplate kept in sync by hand. Both now
use one FakeHttpClient that replays queued responses and records what was
sent.