@@ -1,19 +1,10 @@
 package com.pabaumgartner.photogallery.wizard.service;
 
 import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpHeaders;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-
-import javax.net.ssl.SSLSession;
 
 import com.pabaumgartner.photogallery.wizard.config.PicPeakProperties;
 import com.pabaumgartner.photogallery.wizard.config.SchulfotosProperties;
@@ -44,13 +35,13 @@ class CsvUploadServiceTest {
 		Path csvFile = tempDir.resolve("test-codes.csv");
 		Files.writeString(csvFile, "Number,Code\n1,ABCD-1234-WXYZ", StandardCharsets.UTF_8);
 
-		RecordingHttpClient client = new RecordingHttpClient(201, "Created");
+		FakeHttpClient client = FakeHttpClient.replying(201, "Created");
 		CsvUploadService service = new CsvUploadService(schulfotosProperties("https://example.com/schulfotos"),
 				picPeakProperties("user@test.com", "secret"), client);
 
 		service.upload(csvFile);
 
-		assertThat(client.requests).hasSize(1);
+		assertThat(client.recorded()).hasSize(1);
 	}
 
 	@Test
@@ -58,14 +49,14 @@ class CsvUploadServiceTest {
 		Path csvFile = tempDir.resolve("creds.csv");
 		Files.writeString(csvFile, "data", StandardCharsets.UTF_8);
 
-		RecordingBodyHttpClient client = new RecordingBodyHttpClient(200, "OK");
+		FakeHttpClient client = FakeHttpClient.replying(200, "OK");
 		CsvUploadService service = new CsvUploadService(schulfotosProperties("https://example.com/schulfotos"),
 				picPeakProperties("user@test.com", "s3cret"), client);
 
 		service.upload(csvFile);
 
-		assertThat(client.bodies).hasSize(1);
-		String body = new String(client.bodies.get(0), StandardCharsets.UTF_8);
+		assertThat(client.recorded()).hasSize(1);
+		String body = client.recorded().getFirst().body();
 		assertThat(body).contains("name=\"username\"");
 		assertThat(body).contains("user@test.com");
 		assertThat(body).contains("name=\"password\"");
@@ -77,13 +68,13 @@ class CsvUploadServiceTest {
 		Path csvFile = tempDir.resolve("my-codes.csv");
 		Files.writeString(csvFile, "data", StandardCharsets.UTF_8);
 
-		RecordingHttpClient client = new RecordingHttpClient(200, "OK");
+		FakeHttpClient client = FakeHttpClient.replying(200, "OK");
 		CsvUploadService service = new CsvUploadService(schulfotosProperties("https://example.com/schulfotos"),
 				picPeakProperties("user", "pass"), client);
 
 		service.upload(csvFile);
 
-		assertThat(client.requests.get(0).uri().toString()).isEqualTo("https://example.com/schulfotos/upload.php");
+		assertThat(client.recorded().getFirst().uri()).isEqualTo("https://example.com/schulfotos/upload.php");
 	}
 
 	@Test
@@ -91,13 +82,13 @@ class CsvUploadServiceTest {
 		Path csvFile = tempDir.resolve("method-test.csv");
 		Files.writeString(csvFile, "data", StandardCharsets.UTF_8);
 
-		RecordingHttpClient client = new RecordingHttpClient(200, "OK");
+		FakeHttpClient client = FakeHttpClient.replying(200, "OK");
 		CsvUploadService service = new CsvUploadService(schulfotosProperties("https://example.com/schulfotos"),
 				picPeakProperties("user", "pass"), client);
 
 		service.upload(csvFile);
 
-		assertThat(client.requests.get(0).method()).isEqualTo("POST");
+		assertThat(client.recorded().getFirst().method()).isEqualTo("POST");
 	}
 
 	@Test
@@ -105,7 +96,7 @@ class CsvUploadServiceTest {
 		Path csvFile = tempDir.resolve("fail-test.csv");
 		Files.writeString(csvFile, "data", StandardCharsets.UTF_8);
 
-		RecordingHttpClient client = new RecordingHttpClient(403, "Forbidden");
+		FakeHttpClient client = FakeHttpClient.replying(403, "Forbidden");
 		CsvUploadService service = new CsvUploadService(schulfotosProperties("https://example.com/schulfotos"),
 				picPeakProperties("user", "pass"), client);
 
@@ -118,13 +109,13 @@ class CsvUploadServiceTest {
 		Path csvFile = tempDir.resolve("nocreds.csv");
 		Files.writeString(csvFile, "data", StandardCharsets.UTF_8);
 
-		RecordingHttpClient client = new RecordingHttpClient(200, "OK");
+		FakeHttpClient client = FakeHttpClient.replying(200, "OK");
 		CsvUploadService service = new CsvUploadService(schulfotosProperties("https://example.com/schulfotos"),
 				picPeakProperties("", ""), client);
 
 		service.upload(csvFile);
 
-		assertThat(client.requests).isEmpty();
+		assertThat(client.recorded()).isEmpty();
 	}
 
 	@Test
@@ -132,15 +123,14 @@ class CsvUploadServiceTest {
 		Path csvFile = tempDir.resolve("content-type.csv");
 		Files.writeString(csvFile, "data", StandardCharsets.UTF_8);
 
-		RecordingHttpClient client = new RecordingHttpClient(200, "OK");
+		FakeHttpClient client = FakeHttpClient.replying(200, "OK");
 		CsvUploadService service = new CsvUploadService(schulfotosProperties("https://example.com/schulfotos"),
 				picPeakProperties("user", "pass"), client);
 
 		service.upload(csvFile);
 
-		assertThat(client.requests.get(0).headers().firstValue("Content-Type")).isPresent();
-		assertThat(client.requests.get(0).headers().firstValue("Content-Type").get())
-			.startsWith("multipart/form-data; boundary=");
+		assertThat(client.recorded().getFirst().request().headers().firstValue("Content-Type"))
+			.hasValueSatisfying(contentType -> assertThat(contentType).startsWith("multipart/form-data; boundary="));
 	}
 
 	@Test
@@ -148,13 +138,13 @@ class CsvUploadServiceTest {
 		Path csvFile = tempDir.resolve("insecure.csv");
 		Files.writeString(csvFile, "data", StandardCharsets.UTF_8);
 
-		RecordingHttpClient client = new RecordingHttpClient(200, "OK");
+		FakeHttpClient client = FakeHttpClient.replying(200, "OK");
 		CsvUploadService service = new CsvUploadService(schulfotosProperties("http://example.com/schulfotos"),
 				picPeakProperties("user@test.com", "secret"), client);
 
 		assertThatThrownBy(() -> service.upload(csvFile)).isInstanceOf(IOException.class)
 			.hasMessageContaining("Refusing to send credentials");
-		assertThat(client.requests).isEmpty();
+		assertThat(client.recorded()).isEmpty();
 	}
 
 	@Test
@@ -164,196 +154,14 @@ class CsvUploadServiceTest {
 
 		for (String baseUrl : List.of("http://localhost:8080", "http://127.0.0.1:8080", "http://192.168.1.10",
 				"http://gallery.local")) {
-			RecordingHttpClient client = new RecordingHttpClient(200, "OK");
+			FakeHttpClient client = FakeHttpClient.replying(200, "OK");
 			CsvUploadService service = new CsvUploadService(schulfotosProperties(baseUrl),
 					picPeakProperties("user@test.com", "secret"), client);
 
 			service.upload(csvFile);
 
-			assertThat(client.requests).as("expected %s to be accepted", baseUrl).hasSize(1);
+			assertThat(client.recorded()).as("expected %s to be accepted", baseUrl).hasSize(1);
 		}
-	}
-
-	// --- Stub HttpClient ---
-
-	static class RecordingHttpClient extends HttpClient {
-
-		final int statusCode;
-
-		final String body;
-
-		final List<HttpRequest> requests = new ArrayList<>();
-
-		RecordingHttpClient(int statusCode, String body) {
-			this.statusCode = statusCode;
-			this.body = body;
-		}
-
-		@Override
-		@SuppressWarnings("unchecked")
-		public <T> HttpResponse<T> send(HttpRequest request, HttpResponse.BodyHandler<T> responseBodyHandler)
-				throws IOException, InterruptedException {
-			requests.add(request);
-			return (HttpResponse<T>) new StubHttpResponse(statusCode, body, request.uri());
-		}
-
-		@Override
-		public java.util.Optional<java.net.CookieHandler> cookieHandler() {
-			return java.util.Optional.empty();
-		}
-
-		@Override
-		public java.util.Optional<java.time.Duration> connectTimeout() {
-			return java.util.Optional.empty();
-		}
-
-		@Override
-		public Redirect followRedirects() {
-			return Redirect.NEVER;
-		}
-
-		@Override
-		public java.util.Optional<java.net.ProxySelector> proxy() {
-			return java.util.Optional.empty();
-		}
-
-		@Override
-		public javax.net.ssl.SSLContext sslContext() {
-			return null;
-		}
-
-		@Override
-		public javax.net.ssl.SSLParameters sslParameters() {
-			return new javax.net.ssl.SSLParameters();
-		}
-
-		@Override
-		public java.util.Optional<java.net.Authenticator> authenticator() {
-			return java.util.Optional.empty();
-		}
-
-		@Override
-		public Version version() {
-			return Version.HTTP_1_1;
-		}
-
-		@Override
-		public java.util.Optional<java.util.concurrent.Executor> executor() {
-			return java.util.Optional.empty();
-		}
-
-		@Override
-		public <T> java.util.concurrent.CompletableFuture<HttpResponse<T>> sendAsync(HttpRequest request,
-				HttpResponse.BodyHandler<T> responseBodyHandler) {
-			throw new UnsupportedOperationException();
-		}
-
-		@Override
-		public <T> java.util.concurrent.CompletableFuture<HttpResponse<T>> sendAsync(HttpRequest request,
-				HttpResponse.BodyHandler<T> responseBodyHandler,
-				HttpResponse.PushPromiseHandler<T> pushPromiseHandler) {
-			throw new UnsupportedOperationException();
-		}
-
-	}
-
-	static class StubHttpResponse implements HttpResponse<String> {
-
-		private final int statusCode;
-
-		private final String body;
-
-		private final URI uri;
-
-		StubHttpResponse(int statusCode, String body, URI uri) {
-			this.statusCode = statusCode;
-			this.body = body;
-			this.uri = uri;
-		}
-
-		@Override
-		public int statusCode() {
-			return statusCode;
-		}
-
-		@Override
-		public HttpRequest request() {
-			return null;
-		}
-
-		@Override
-		public java.util.Optional<HttpResponse<String>> previousResponse() {
-			return java.util.Optional.empty();
-		}
-
-		@Override
-		public HttpHeaders headers() {
-			return HttpHeaders.of(Map.of(), (a, b) -> true);
-		}
-
-		@Override
-		public String body() {
-			return body;
-		}
-
-		@Override
-		public java.util.Optional<SSLSession> sslSession() {
-			return java.util.Optional.empty();
-		}
-
-		@Override
-		public URI uri() {
-			return uri;
-		}
-
-		@Override
-		public HttpClient.Version version() {
-			return HttpClient.Version.HTTP_1_1;
-		}
-
-	}
-
-	static class RecordingBodyHttpClient extends RecordingHttpClient {
-
-		final List<byte[]> bodies = new ArrayList<>();
-
-		RecordingBodyHttpClient(int statusCode, String responseBody) {
-			super(statusCode, responseBody);
-		}
-
-		@Override
-		@SuppressWarnings("unchecked")
-		public <T> HttpResponse<T> send(HttpRequest request, HttpResponse.BodyHandler<T> responseBodyHandler)
-				throws IOException, InterruptedException {
-			requests.add(request);
-			request.bodyPublisher().ifPresent(pub -> {
-				java.io.ByteArrayOutputStream collected = new java.io.ByteArrayOutputStream();
-				pub.subscribe(new java.util.concurrent.Flow.Subscriber<>() {
-					@Override
-					public void onSubscribe(java.util.concurrent.Flow.Subscription subscription) {
-						subscription.request(Long.MAX_VALUE);
-					}
-
-					@Override
-					public void onNext(java.nio.ByteBuffer item) {
-						byte[] data = new byte[item.remaining()];
-						item.get(data);
-						collected.writeBytes(data);
-					}
-
-					@Override
-					public void onError(Throwable throwable) {
-					}
-
-					@Override
-					public void onComplete() {
-					}
-				});
-				bodies.add(collected.toByteArray());
-			});
-			return (HttpResponse<T>) new StubHttpResponse(statusCode, body, request.uri());
-		}
-
 	}
 
 }
